# Knitpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
include/: assertions.hpp  knit++.hpp  test_mgr.hpp
include/detail/: test_structs.hpp  thread.hpp
include/helpers/: macros.hpp
src/: CMakeLists.txt  knit++.cpp  knitpp.c++  test_mgr.cpp  thread.cpp
test/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp
